<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.studio.conan.gin.EmployeeQRCodeFragment">

    <RelativeLayout
        android:id="@+id/employee_qr_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/hi_trender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="24dip"
            android:text="@string/hi_trender"
            android:textSize="40sp"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="visible"/>

        <FrameLayout
            android:id="@+id/qr_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hi_trender"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/employee_qr"
                android:layout_width="256dip"
                android:layout_height="256dip"
                android:padding="2dip"
                android:contentDescription="@string/qr_description"
                android:background="@drawable/custom_qr"/>

            <ImageView
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:layout_gravity="center"
                android:src="@drawable/ic_trend_micro_256"
                android:visibility="visible"/>

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/qr_info"
            android:layout_centerHorizontal="true"
            android:text="@string/qr_description"
            android:textColor="@android:color/holo_red_dark"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/employee_input_view"
        android:layout_width="256dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/employee_psid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_psid"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:inputType="number"/>

        <EditText
            android:id="@+id/employee_sn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_sn"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionSend"/>

        <Button
            android:id="@+id/generate_qr_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:text="@string/action_gen_qr"
            android:background="@drawable/custom_button"/>

    </LinearLayout>

</FrameLayout>
