<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.studio.conan.gin.CheckInResultActivity">

    <RelativeLayout
        android:id="@+id/check_in_success_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/welcome"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="32sp"/>

        <TextView
            android:id="@+id/check_in_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_marginLeft="24dip"
            android:layout_marginTop="12dip"
            android:text="Conan Hsieh"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="40sp"/>

        <GridLayout
            android:id="@+id/prize_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_in_name"
            android:layout_centerHorizontal="true"
            android:rowCount="2"
            android:columnCount="2">

            <ImageButton
                android:id="@+id/prize_tag_1"
                android:layout_width="96dip"
                android:layout_height="96dip"
                android:layout_margin="8dip"
                android:scaleType="fitCenter"
                android:background="@drawable/custom_prize_1_btn_release"/>

            <ImageButton
                android:id="@+id/prize_tag_2"
                android:layout_width="96dip"
                android:layout_height="96dip"
                android:layout_margin="8dip"
                android:scaleType="fitCenter"
                android:background="@drawable/custom_prize_2_btn_release"/>

            <ImageButton
                android:id="@+id/prize_tag_3"
                android:layout_width="96dip"
                android:layout_height="96dip"
                android:layout_margin="8dip"
                android:scaleType="fitCenter"
                android:background="@drawable/custom_prize_3_btn_release"/>

            <ImageButton
                android:id="@+id/prize_tag_4"
                android:layout_width="96dip"
                android:layout_height="96dip"
                android:layout_margin="8dip"
                android:scaleType="fitCenter"
                android:background="@drawable/custom_prize_4_btn_release"/>

        </GridLayout>


        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="36dip"
            android:background="@drawable/custom_send_prize_tag_button"
            android:text="@string/action_send"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/check_in_fail_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/check_in_failed"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="32sp"
        android:visibility="gone"/>

</RelativeLayout>
